# chess_clock_fw

./: .gitignore  CMakeLists.txt  README.md  b  c  cmakelists_ex.txt  d  openocd-frdm-kl46z.cfg
apps/: CMakeLists.txt
apps/blinky/: CMakeLists.txt
apps/blinky/src/: main.c
apps/i2c_demo/: CMakeLists.txt
apps/i2c_demo/src/: main.c
bsp/: CMakeLists.txt
bsp/frdm-kl25z/: CMakeLists.txt
bsp/frdm-kl25z/inc/bsp/: bsp_led.h
bsp/frdm-kl25z/src/: bsp.c  bsp_led.c
cmake/: create_application.cmake  create_library.cmake  gcc-arm.toolchain.cmake  mkl25z4.cmake  mkl46z4.cmake
devices/: CMakeLists.txt
devices/CMSIS/: CMakeLists.txt
devices/mkl25z4/: CMakeLists.txt
devices/mkl25z4/inc/: MKL25Z4.h
devices/mkl46z/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/clock/: CMakeLists.txt
drivers/clock/inc/driver/: clock.h
drivers/clock/src/: clock.c
drivers/gpio/: CMakeLists.txt
drivers/gpio/inc/driver/: gpio.h
drivers/gpio/src/: gpio.c
drivers/i2c/: CMakeLists.txt
drivers/i2c/inc/driver/: i2c.h
drivers/i2c/src/: i2c.c
drivers/watchdog/: CMakeLists.txt
drivers/watchdog/inc/driver/: watchdog.h
drivers/watchdog/src/: watchdog.c
libraries/: CMakeLists.txt
